updates for reading from URLs from GenomeSpace
git-svn-id: http://chianti.ucsd.edu/svn@29050 0ecc0d97-ab19-0410-9704-bfe1a75892f5